--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ h1, h2, h3, h4, h5, h6, span {
 
 }
 
+h1 {
+    font-size: 36px;
+}
+
 p {
     line-height: 1.5;
     font-size: 16px;
@@ -23,8 +27,24 @@ li {
     list-style: none;
 }
 
+.container {
+    padding: 50px 0;
+}
 
 
+.flex-1 {
+    flex: 1;
+}
+
+section:nth-child(even) {
+    background-color: #f8f8f8;
+}
+
+.section__title {
+    margin-bottom: 20px;
+}
+ 
+/* NAVIGATION BAR */
 
 
 nav {
@@ -66,4 +86,166 @@ nav {
     color: #6030b1;
     margin: 0 12px;
     font-weight: bold;
+}
+
+.row {
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.text--purple {
+    color: #6030b1;
+}
+
+
+/* ABOUT ME */
+
+#about-me {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.about-me__info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.about-me__info--container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: center;
+    
+}
+
+.havish_img {
+   
+    width: 100%;
+    height: 100%;
+    transform: scale(1.2);
+    padding: 8px;
+}
+
+.about-me__picture--mask {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
+    margin-bottom: 28px;
+}
+
+.about-me__info--title {
+    margin-bottom: 16px;
+
+}
+
+.about-me__info--para { 
+    font-size: 20px;
+    margin-bottom: 28px;
+
+}
+
+.about-me__link {
+    font-size: 20px;
+    color: #242424;
+    text-decoration: none;
+    padding: 0 16px;
+}
+
+.about-me__img--container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    margin-top: 80px;
+}
+
+/* TECH STACK */
+
+.language__img {
+  width: 100%;
+  max-width: 100px;
+  transition: all 300ms;
+}
+.language:hover .language__img {
+  filter: brightness(80%);
+  opacity: 0.86;
+  transform: scale(0.9);
+}
+
+.language {
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+.language__img--wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 16px;
+}
+
+.language__list {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  flex-wrap: wrap;
+}
+
+.language__name {
+  position: absolute;
+  bottom: 0;
+  transform: scale(0);
+  transition: all 300ms;
+  font-size: 20px;
+  opacity: 0;
+}
+.language:hover .language__name {
+  transform: scale(1);
+  opacity: 1;
+}
+
+/* Projects */
+
+.project__img {
+    width: 100%;
+}
+
+.project__wrapper {
+    box-shadow: 0 20px 80px rgba(0,0 ,0 ,0.45 );
+    border-radius: 20px;
+    overflow: hidden;
+    display: flex;
+    position: relative;
+}
+
+.project__wrapper:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #1c1d25;
+    opacity: 0;
+    transition: 450ms ease;
+    
+}
+
+.project:hover .project__wrapper:before {
+    opacity: 0.7;
+
+
+    
+}
+
+.project:hover .project__img {
+    transform: scale(1.07)
 }
